# summer_school_Fempty34

lab01/: lab01.md
lab02/: lab02.md
lab02/Server/: Cargo.toml
lab02/Server/migrations/2024-06-20-133737_create_products/: up.sql
lab02/Server/src/: main.rs
lab02/Server/src/directory/: database.rs
lab02/Server/src/handlers/: handlers.rs
lab02/Server/src/models/: mod.rs  product.rs  schema.rs
lab03/: lab03.md
lab03/a/src/: main.rs
lab03/b/: Cargo.toml
lab03/b/src/: main.rs
lab03/c/: Cargo.toml
lab03/c/src/: main.rs
